welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: not found: value numcol
		setCouleurBrosse( T((o+numcol) % hauteur))
                                       ^